--- a/src/components/buttonBig/buttonBig.scss
+++ b/src/components/buttonBig/buttonBig.scss
@@ -1,18 +1,22 @@
 .btn__big {
     width: 200px;
     border: none;
-    background-color: #a13a1b;
+    background-color: #ca6040;
     padding: 15px 0;
-    font-size: 17px;
+    font-size: 12px;
     text-align: center;
     text-transform: uppercase;
-    font-weight: 600;
+    font-weight: 800;
+    cursor: pointer;
 }
 
 ._bigplain {
     background: transparent;
     border: 3px solid #a13a1b;
+    padding: 14px 0;
+    font-size: 15px;
     color:#a13a1b;
+    width: 300px;
 }
 
 ._plainBig {
@@ -20,11 +24,16 @@
 }
 
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 650px) {
     .btn__big {
-        width: 170px;
+        width: 175px;
         font-size: 12px;
         font-weight: 800;
+    }
+
+    ._bigplain {
+        width: 200px;
+        padding: 13px 0;
     }
 
     ._plainBig {
