--- a/src/components/buttonSmall/buttonSmall.scss
+++ b/src/components/buttonSmall/buttonSmall.scss
@@ -1,12 +1,13 @@
 .btn__small {
     width: 165px;
     border: none;
-    background: linear-gradient(to bottom, #f87e59 ,#a13a1b);
-    padding: 15px 0;
-    font-size: 17px;
+    background: linear-gradient(to bottom, #cf5834 ,#a13a1b);
+    padding: 17px 0;
+    font-size: 15px;
     text-align: center;
     text-transform: uppercase;
-    font-weight: 600;
+    font-weight: 700;
+    cursor: pointer;
 }
 
 ._smallround {
@@ -22,10 +23,11 @@
 }
 
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 650px) {
     .btn__small {
-        width: 100px;
-        font-size: 12px;
+        width: 125px;
+        font-size: 13px;
         font-weight: 800;
+        padding: 15px 0;
     }
 }
