added signUp ui

--- a/src/Pages/homePage/homePage.scss
+++ b/src/Pages/homePage/homePage.scss
@@ -1,9 +1,10 @@
 .home__head {
-    height: 780px;
+    height: 720px;
     width: 100%;
     background-image: url('https://res.cloudinary.com/kadoshi/image/upload/v1603722032/PC/Hero_Image_2_ei2r2r.png');
     background-position: center;
     background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .home__head_btn {
