added signups for customer and professional

--- a/src/Pages/signIn/signIn.scss
+++ b/src/Pages/signIn/signIn.scss
@@ -2,13 +2,14 @@
     height: 97vh;
     background-image: url(https://res.cloudinary.com/kadoshi/image/upload/v1603723346/PC/Sign_In_kntxuj.png);
     background-position: center;
+    background-attachment: fixed;
     background-size: cover;
     background-repeat: no-repeat;
 }
 
 .signIn__main_body {
     color: #fff;
-    height: 55vh;
+    height: 65vh;
     display: flex;
     width: 85%;
     margin: 5% auto;
